--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit
-opencv-python-headless
-cvzone
-mediapipe
-numpy
-# outras dependências
+streamlit==1.39.0
+opencv-python-headless==4.10.0.84
+cvzone==1.6.1
+mediapipe==0.10.14
+numpy==2.1.2
